--- a/package.json
+++ b/package.json
@@ -3,7 +3,28 @@
   "version": "0.0.1",
   "description": "The backend for a real-time communicator app. Built using Socket.IO.",
   "type": "module",
+  "scripts": {
+    "build": "rimraf dist && tsc",
+    "dev": "NODE_ENV=development tsx watch ./src/index.ts",
+    "start": "NODE_ENV=production node dist/index.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/express": "^4.17.21",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "rimraf": "^5.0.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.1.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
