--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
