--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "argon2": "^0.31.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "rimraf": "^5.0.5",
     "socket.io": "^4.7.2"
   },
