--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
