--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "The backend for a real-time communicator app. Built using Socket.IO.",
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "dev": "NODE_ENV=development tsx watch ./src/index.ts",
-    "start": "NODE_ENV=production node dist/index.js"
+    "start": "NODE_ENV=production node dist/index.js",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -25,6 +26,7 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
@@ -32,7 +34,11 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
+    "json5": "^2.2.3",
     "prettier": "^3.1.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
