--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "dotenv-expand": "^11.0.6",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
