--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
