--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^11.0.6",
     "express": "^4.18.2",
