--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rimraf": "^5.0.5",
+    "sanitize-html": "^2.13.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
