--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "argon2": "^0.31.2",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rimraf": "^5.0.5",
