--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/ua-parser-js": "^0.7.39",
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -32,7 +33,8 @@
     "passport-jwt": "^4.0.1",
     "rimraf": "^5.0.5",
     "sanitize-html": "^2.13.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "ua-parser-js": "^1.0.37"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
