--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/request-ip": "^0.0.41",
     "@types/ua-parser-js": "^0.7.39",
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
@@ -31,6 +32,7 @@
     "nodemailer-express-handlebars": "^6.1.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "request-ip": "^3.3.0",
     "rimraf": "^5.0.5",
     "sanitize-html": "^2.13.0",
     "socket.io": "^4.7.2",
