--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/passport": "^1.0.16",
@@ -26,6 +27,7 @@
     "dotenv-expand": "^11.0.6",
     "error-handler-json": "^2.1.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
