--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "error-handler-json": "^2.1.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
