--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^11.0.6",
     "error-handler-json": "^2.1.0",
