--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "request-ip": "^3.3.0",
     "rimraf": "^5.0.5",
     "sanitize-html": "^2.13.0",
+    "short-unique-id": "^5.2.0",
     "socket.io": "^4.7.2",
     "ua-parser-js": "^1.0.37"
   },
