--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sanitize-html": "^2.13.0",
     "short-unique-id": "^5.2.0",
     "socket.io": "^4.7.2",
-    "ua-parser-js": "^1.0.37"
+    "ua-parser-js": "^1.0.37",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
