--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,9 @@
       "@routes/*": ["./src/routes/*"],
       "@helpers/*": ["./src/helpers/*"],
       "@views/*": ["./src/views/*"],
-      "@src/*": ["./src/*"]
+      "@customTypes/*": ["./src/types/*"],
+      "@src/*": ["./src/*"],
+      "@tests/*": ["./tests/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     "rootDirs": [
       "./src/",
