--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonpatch": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.13",
     "nodemailer-express-handlebars": "^6.1.2",
     "passport": "^0.7.0",
