--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "dev": "NODE_ENV=development tsx watch ./src/index.ts",
+    "dev-remote": "NODE_ENV=dev-remote tsx watch ./src/index.ts",
     "start": "NODE_ENV=production node dist/index.js",
     "test": "NODE_ENV=test jest"
   },
