--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
+    "@types/http-errors": "^2.0.4",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/passport": "^1.0.16",
@@ -32,6 +33,7 @@
     "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "http-errors": "^2.0.0",
     "jsonpatch": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
