--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-errors": "^2.0.0",
     "jsonpatch": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-dot-notation": "^3.1.1",
     "mongoose": "^8.1.3",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.13",
