--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -23,6 +24,7 @@
     "@types/request-ip": "^0.0.41",
     "@types/ua-parser-js": "^0.7.39",
     "argon2": "^0.31.2",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "deepmerge": "^4.3.1",
