--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The backend for a real-time communicator app. Built using Socket.IO.",
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build": "rimraf dist && tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
     "dev": "NODE_ENV=development tsx watch ./src/index.ts",
     "dev-remote": "NODE_ENV=dev-remote tsx watch ./src/index.ts",
     "start": "NODE_ENV=production node dist/index.js",
@@ -68,6 +68,7 @@
     "prettier": "^3.1.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "tsc-alias": "^1.8.11",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
