Move env file location
When deploying the app to production I stumbled into an issue with
Docker. Docker bind mounts obscure existing files in a directory in
the container. When creating a bind mount that would share env files
from the host system to the root directory of the container, all
existing source code would become unavailable and app wouldn't run.

App has been reconfigured to pull .env files from a dedicated "env"
directory, which fixes the problem.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 node_modules/
 dist/
-.env
-.env.production
-.env.development
-.env.dev-remote
-.env.test
+env/*
+!env/.env.example
 
 localhost-key.pem
 localhost.pem
